flux/apps/smart-home/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: homeassistant
  labels:
    app: esphome
spec:
  selector:
    matchLabels:
      app: esphome
  replicas: 1
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
      - name: esphome
        image: docker.io/esphome/esphome:2026.3.3 # {"$imagepolicy": "flux-system:esphome-policy"}
        volumeMounts:
        - mountPath: /config
          name: config
        resources:
          requests:
            cpu: 100m
            memory: 64M
          limits:
            cpu: 1000m
            memory: 128M
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: esphome-config
