flux/apps/smart-home/esphome/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: esphome
  namespace: homeassistant
  labels:
    app: esphome
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: esphome
  serviceName: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
      - name: esphome
        image: docker.io/esphome/esphome:2026.9.1 # {"$imagepolicy": "flux-system:esphome-policy"}
        volumeMounts:
        - mountPath: /config
          name: config
        resources:
          requests:
            cpu: 100m
            memory: 64M
          limits:
            cpu: 1000m
            memory: 128M
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: esphome-config
