flux/apps/smart-home/esphome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
  namespace: homeassistant
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - esphome.${GLOBAL_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: esphome
      port: 6052
